changed theme look

--- a/themes/storygen/sass/style.scss
+++ b/themes/storygen/sass/style.scss
@@ -5,7 +5,7 @@
 @import "breakpoint";
 
 // Import sass partials
-@import "variables/**/*.scss";
+@import "helpers/**/*.scss";
 @import "abstractions/**/*.scss";
 @import "base/**/*.scss";
 @import "components/**/*.scss";
