--- a/themes/storygen/sass/base/_base.scss
+++ b/themes/storygen/sass/base/_base.scss
@@ -12,203 +12,16 @@ body {
   margin: 0px;
 }
 
-p,
-ol,
-ul,
-dl,
-table {
-	margin: 0 0 $margins 0;
-}
-
-ul li ul {
-	margin-bottom: 0;
-}
-
-ol li ol {
-	margin-bottom: 0;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-	margin: $margins 0;
-	font-family: $heading-font;
-  font-weight: $heading-font-weight;
-	color: $heading-colour;
-	&:not(:first-child) {
-		margin: 1.5rem 0;
-	}
-}
-
-.region-navigation{
-  padding: 0rem;
-  margin: 0rem;
-  height: 38px;
-}
-
-.menu {
-  list-style: none;
-}
-.menu-item {
-  display: inline-block;
-}
-
-.menu-item a {
-  font-family: $navigation-font-family;
-  font-weight: $navigation-font-weight;
-  font-size: $navigation-font-size;
-  padding: $navigation-item-padding;
-  color: rgba($navigation-item-colour, 1);
-  text-transform: uppercase;
-  text-decoration: none;
-  display: block;
-  transition: .3s background-color;
-  padding: 0.2rem 1rem;
-}
-
-.menu-item a:hover {
-  background-color: rgba($sg-blue,0.5);
-}
-
-.menu-item a.active {
-  background-color: #fff;
-  color: #444;
-  cursor: default;
-}
-
-.site-name{
-  a{
-    font-size: $site-name-size;
-    text-decoration: none;
-    color: $site-name-colour;
-    font-weight: 400;
-  }
-}
-
-.banner-headline{
-  color: $sg-white;
-  font-family: $heading-font;
-  font-size: $banner-headline-size;
-	font-weight: $heading-font-weight;
-  line-height: $banner-headline-size*1.2;
-  margin: 20px;
-  text-shadow: 2px 2px 2px rgba($sg-black, 0.4);
-}
-.banner-tagline{
-	color: $sg-white;
-  font-family: $heading-font;
-  font-size: $banner-tagline-size;
-  line-height: $banner-tagline-size*1.2;
-  margin: 20px;
-  text-shadow: 2px 2px 2px rgba($sg-black, 0.4);
-}
-
-h1 {
-	font-size: $h1;
-}
-h2 {
-	font-size: $h2;
-}
-h3 {
-	font-size: $h3;
-}
-h4 {
-	font-size: $h4;
-}
-h5 {
-	font-size: $h5;
-}
-h6 {
-	font-size: $h6;
-}
-
 @include small-breakpoint {
-	// Increased margin on additional headings
-	h1:not(:first-child),
-	h2:not(:first-child),
-	h3:not(:first-child) {
-		margin-top: 2.5rem;
-	} // Heading desktop individual styles
-	h1 {
-		font-size: $h1-tablet;
-	}
-	h2 {
-		font-size: $h2-tablet;
-	}
-	h3 {
-		font-size: $h3-tablet;
-	}
-	h4 {
-		font-size: $h4-tablet;
-	}
-	h5 {
-		font-size: $h5-tablet;
-	}
-  h6 {
-    font-size: $h6-tablet;
-  }
-  p{
-    font-size: $body-font-size-tablet;
-  }
-  .site-name{
-    a{
-      font-size: $site-name-size-tablet;
-    }
-  }
-  .banner-headline{
-    font-size: $banner-headline-size-tablet;
-  }
-	.banner-tagline{
-		font-size: $banner-tagline-size-tablet;
+
+	body{
+			font-size: $body-font-size*1.1;
 	}
 }
 
 @include large-breakpoint {
-	// Increased margin on additional headings
-	h1:not(:first-child),
-	h2:not(:first-child),
-	h3:not(:first-child) {
-		margin-top: 3rem;
-	} // Heading desktop individual styles
-	h1 {
-		font-size: $h1-desktop;
-	}
-	h2 {
-		font-size: $h2-desktop;
-	}
-	h3 {
-		font-size: $h3-desktop;
-	}
-	h4 {
-		font-size: $h4-desktop;
-	}
-	h5 {
-		font-size: $h5-desktop;
-	}
-  h6 {
-    font-size: $h6-desktop;
-  }
-  p{
-    font-size: $body-font-size-desktop;
-  }
-  .site-name{
-    a{
-      font-size: $site-name-size-desktop;
-    }
-  }
-	.banner-headline{
-    font-size: $banner-headline-size-desktop;
-  }
-	.banner-tagline{
-		font-size: $banner-tagline-size-desktop;
-	}
-}
 
-h1:not(:first-child),
-h2:not(:first-child),
-h3:not(:first-child) {
-	margin-top: 2rem;
+	body{
+			font-size: $body-font-size*1.2;
+	}
 }
