--- a/themes/storygen/sass/base/_layout.scss
+++ b/themes/storygen/sass/base/_layout.scss
@@ -1,28 +1,3 @@
-/*
-<div class="sg-container">
-  <div class="sg-header">
-    <div class="sg-header-logo-image">
-
-    </div>
-    <div class="sg-header-logo-wordmark">
-
-    </div>
-  </div>
-  <div class="sg-banner">
-    <div class="sg-banner-text">
-
-    </div>
-    <div class="sg-banner-button">
-
-    </div>
-  </div>
-  <div class="sg-content-container">
-
-  </div>
-</div>
-<div class="sg-navbar">
-*/
-
 /* Basic Layout Blocks */
 
 .sg-container{
@@ -32,7 +7,7 @@
 /* Header */
 
 .sg-header{
-  height: 250px;
+  height: 200px;
   background-color: $sg-purple;
 }
 
@@ -54,29 +29,22 @@
 }
 
 .sg-header-main{
-  height: 225px;
+  height: 175px;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.sg-header-logo-wordmark{
-  font-size: $site-name-size;
-  height: $site-name-size;
-  font-family: $logo-font;
-  color: $sg-white;
-}
-
 /* Banner */
 .sg-banner-image{
-  height:350px;
+//  height:300px;
   //background-image:url('../images/stars.jpg');
   background-size: cover;
   background-position: center;
 }
 .sg-banner{
-  height: 350px;
+  //height: 300px;
   //background: linear-gradient(90deg, rgba($sg-pink-darker,0.5), rgba($sg-yellow-darker,0.2) 40%, rgba($sg-yellow-darker,0.2) 60%, rgba($sg-blue-darker,0.5));
   background: rgba($sg-pink, 1);
   display: flex;
@@ -87,6 +55,8 @@
 
 .sg-banner-contents{
   text-align: center;
+  padding-top: $padding;
+  padding-bottom: $padding;
 }
 
 .sg-banner-text{
@@ -112,11 +82,40 @@
   align-items: center;
   justify-content: center;
   background-color: $sg-purple;
-  //background-color: rgba($sg-white, 0.2);
+  padding-right: 1rem;
+  overflow-x: auto;
+  //border-top: 1px solid rgba($sg-yellow, 0.8);
+  //background: rgba($sg-yellow, 1);
   //border-bottom: 1px solid rgba($navigation-item-colour, 0.3);
 }
 
 .sg-footer{
   padding: $padding;
   text-align: center;
+}
+
+@include small-breakpoint {
+  .sg-header{
+    height: 225px;
+  }
+  .sg-header-main{
+    height: 200px;
+  }
+  .sg-banner-contents{
+    padding-top: $padding*1.5;
+    padding-bottom: $padding*1.5;
+  }
+}
+
+@include large-breakpoint {
+  .sg-header{
+    height: 250px;
+  }
+  .sg-header-main{
+    height: 225px;
+  }
+  .sg-banner-contents{
+    padding-top: $padding*2;
+    padding-bottom: $padding*2;
+  }
 }
