--- a/themes/storygen/sass/base/_typography.scss
+++ b/themes/storygen/sass/base/_typography.scss
@@ -1,1 +1,242 @@
+/* Logo */
 
+.sg-header-logo-wordmark{
+  font-size: $site-name-size;
+  height: $site-name-size;
+  font-family: $logo-font;
+  color: $sg-white;
+}
+
+p,
+ol,
+ul,
+dl,
+table {
+	margin: 0 0 $margins 0;
+}
+
+ul li ul {
+	margin-bottom: 0;
+}
+
+ol li ol {
+	margin-bottom: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	margin: $margins 0;
+	font-family: $heading-font;
+  font-weight: $heading-font-weight;
+	color: $heading-colour;
+	&:not(:first-child) {
+		margin: 1.5rem 0;
+	}
+}
+
+.sg-content-container {
+  a {
+    color: $sg-pink;
+    text-decoration: none;
+  }
+  a:hover {
+    text-decoration: underline;
+  }
+  h2 {
+    a {
+      color: $sg-black;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+  }
+}
+
+.region-navigation{
+  padding: 0rem;
+  margin: 0rem;
+  height: 38px;
+}
+
+.menu {
+  list-style: none;
+}
+.menu-item {
+  display: inline-block;
+}
+
+.menu-item a {
+  font-family: $navigation-font-family;
+  font-weight: $navigation-font-weight;
+  font-size: $navigation-font-size;
+  color: rgba($navigation-item-colour, 1);
+  text-transform: uppercase;
+  text-decoration: none;
+  display: block;
+  transition: .3s background-color;
+  padding: $navigation-item-padding;
+}
+
+.menu-item a:hover {
+  background-color: rgba($sg-blue,0.5);
+}
+
+.menu-item a.active {
+  background-color: #fff;
+  color: #444;
+  cursor: default;
+}
+
+.site-name{
+  a{
+    font-size: $site-name-size;
+    text-decoration: none;
+    color: $site-name-colour;
+    font-weight: 400;
+		line-height: 50px;
+  }
+}
+
+h1 {
+	font-size: $h1;
+}
+h2 {
+	font-size: $h2;
+}
+h3 {
+	font-size: $h3;
+}
+h4 {
+	font-size: $h4;
+}
+h5 {
+	font-size: $h5;
+}
+h6 {
+	font-size: $h6;
+}
+
+.banner-headline{
+  color: $sg-white;
+  font-family: $heading-font;
+  font-size: $banner-headline-size;
+	font-weight: 400;
+  line-height: $banner-headline-size*1.2;
+  margin: 20px;
+  text-shadow: 2px 2px 2px rgba($sg-black, 0.4);
+}
+.banner-tagline{
+	color: $sg-white;
+  font-family: $heading-font;
+  font-size: $banner-tagline-size;
+  line-height: $banner-tagline-size*1.2;
+  margin: 20px;
+  text-shadow: 2px 2px 2px rgba($sg-black, 0.4);
+}
+
+@include small-breakpoint {
+	// Increased margin on additional headings
+	h1:not(:first-child),
+	h2:not(:first-child),
+	h3:not(:first-child) {
+		margin-top: 2.5rem;
+	} // Heading desktop individual styles
+	h1 {
+		font-size: $h1-tablet;
+	}
+	h2 {
+		font-size: $h2-tablet;
+	}
+	h3 {
+		font-size: $h3-tablet;
+	}
+	h4 {
+		font-size: $h4-tablet;
+	}
+	h5 {
+		font-size: $h5-tablet;
+	}
+  h6 {
+    font-size: $h6-tablet;
+  }
+  .site-name{
+    a{
+      font-size: $site-name-size-tablet;
+    }
+  }
+  .menu-item a {
+    font-size: $navigation-font-size-tablet;
+    padding: $navigation-item-padding-tablet;
+  }
+  .banner-headline{
+    font-size: $banner-headline-size-tablet;
+  }
+	.banner-tagline{
+		font-size: $banner-tagline-size-tablet;
+	}
+}
+
+@include large-breakpoint {
+	// Increased margin on additional headings
+	h1:not(:first-child),
+	h2:not(:first-child),
+	h3:not(:first-child) {
+		margin-top: 3rem;
+	} // Heading desktop individual styles
+	h1 {
+		font-size: $h1-desktop;
+	}
+	h2 {
+		font-size: $h2-desktop;
+	}
+	h3 {
+		font-size: $h3-desktop;
+	}
+	h4 {
+		font-size: $h4-desktop;
+	}
+	h5 {
+		font-size: $h5-desktop;
+	}
+  h6 {
+    font-size: $h6-desktop;
+  }
+  .site-name{
+    a{
+      font-size: $site-name-size-desktop;
+    }
+  }
+  .menu-item a {
+    font-size: $navigation-font-size-desktop;
+    padding: $navigation-item-padding-desktop;
+  }
+	.banner-headline{
+    font-size: $banner-headline-size-desktop;
+  }
+	.banner-tagline{
+		font-size: $banner-tagline-size-desktop;
+	}
+}
+
+h1:not(:first-child),
+h2:not(:first-child),
+h3:not(:first-child) {
+	margin-top: 2rem;
+}
+
+/* Banner (collapsed) */
+
+/* Content */
+
+/* Footer */
+
+.region-copyright{
+  padding: $padding;
+  text-align: center;
+  font-size: $footer-text-size;
+}
