--- a/themes/storygen/templates/page.html.twig
+++ b/themes/storygen/templates/page.html.twig
@@ -58,15 +58,7 @@
   </div>
   <div class="sg-banner-image">
     <div class="sg-banner">
-      <div class="sg-banner-contents">
-        <div class="sg-banner-text">
-          <p class="banner-headline">Your story is tomorrow's news</p>
-          <p class="banner-tagline">You're creating a story using technology, we'll tell it to those who matter</p><br />
-        </div>
-        <div class="sg-banner-button">
-          <input type="button" class="button" value="Contact us"/>
-        </div>
-      </div>
+    {{ page.banner }}
     </div>
   </div>
   <div class="sg-content-container">
