--- a/themes/storygen/sass/base/_typography.scss
+++ b/themes/storygen/sass/base/_typography.scss
@@ -86,6 +86,18 @@ h6 {
   background-color: rgba($sg-blue,0.5);
 }
 
+.menu-item a:active {
+  color: $sg-white;
+}
+
+.menu-item a:is-active {
+  color: $sg-white;
+}
+
+.menu-item a:visited {
+  color: $sg-white;
+}
+
 .site-name{
   a{
     font-size: $site-name-size;
