some changes to style of team page

--- a/themes/storygen/sass/base/_layout.scss
+++ b/themes/storygen/sass/base/_layout.scss
@@ -82,9 +82,10 @@
   background-color: $sg-purple;
   padding-right: 1rem;
   overflow-x: auto;
+  overflow-y: hidden;
   //border-top: 1px solid rgba($sg-yellow, 0.8);
   //background: rgba($sg-yellow, 1);
-  //border-bottom: 1px solid rgba($navigation-item-colour, 0.3);
+  border-bottom: 3px solid $sg-pink-darker;
 }
 
 .sg-footer{
