--- a/themes/storygen/sass/base/_base.scss
+++ b/themes/storygen/sass/base/_base.scss
@@ -6,8 +6,8 @@ html {
 }
 
 body {
-  background: $body-background-colour;
-  color: $text-colour;
+  background: $body-background-color;
+  color: $text-color;
   font-size: $body-font-size;
   margin: 0px;
 }
