--- a/themes/storygen/sass/helpers/_variables.scss
+++ b/themes/storygen/sass/helpers/_variables.scss
@@ -16,7 +16,7 @@ $xlarge-width: 1800px;
 $mobile: $small-width;
 $desktop: $medium-width;
 
-/* Colour Scheme */
+/* color Scheme */
 
 $sg-white: #FFFFFF;
 $sg-black: #171717;
@@ -38,16 +38,17 @@ $sg-blue-lighter: lighten($sg-blue, 15%);
 $sg-blue-darker: darken($sg-blue, 15%);
 
 $sg-grey: #666666;
-$sg-grey-lighter: lighten($sg-grey, 15%);
+$sg-grey-lighter: lighten($sg-grey, 45%);
 $sg-grey-darker: darken($sg-grey, 15%);
 
-/* Colour Config */
+/* color Config */
 
-$body-background-colour: $sg-white;
-$primary-colour: $sg-purple;
-$secondary-colour: $sg-blue-lighter;
-$accent-colour: $sg-pink;
-$text-colour: $sg-black;
+$body-background-color: $sg-white;
+$primary-color: $sg-purple;
+$secondary-color: $sg-blue-lighter;
+$accent-color: $sg-pink;
+$text-color: $sg-black;
+$link-color: $sg-blue-lighter;
 
 /* Typography */
 
@@ -57,10 +58,10 @@ $text-colour: $sg-black;
 // Font Family Config
 
 $logo-font: 'Raleway', sans-serif;
-$site-name-colour: $sg-white;
+$site-name-color: $sg-white;
 $heading-font: 'Lato', sans-serif;
 $heading-font-weight: 600;
-$heading-colour: $sg-black;
+$heading-color: $sg-black;
 $body-font: 'Open Sans', sans-serif;
 $body-font-weight: 400;
 $font-style: normal;
@@ -78,8 +79,8 @@ $body-line-height: 1.6rem;
 $site-name-size: 2.5rem;
 $banner-headline-size: 2rem;
 $banner-tagline-size: 1rem;
-$h1: 1.75rem;
-$h2: 1.5rem;
+$h1: 1.5rem;
+$h2: 1.4rem;
 $h3: 1.25rem;
 $h4: 1.1rem;
 $h5: 1rem;
@@ -89,8 +90,8 @@ $h6: 0.9rem;
 $site-name-size-tablet: 3.75rem;
 $banner-headline-size-tablet: 2.5rem;
 $banner-tagline-size-tablet: 1.2rem;
-$h1-tablet: 2rem;
-$h2-tablet: 1.75rem;
+$h1-tablet: 1.7rem;
+$h2-tablet: 1.6rem;
 $h3-tablet: 1.5rem;
 $h4-tablet: 1.25rem;
 $h5-tablet: 1.1rem;
@@ -100,8 +101,8 @@ $h6-tablet: 1rem;
 $site-name-size-desktop: 4rem;
 $banner-headline-size-desktop: 3rem;
 $banner-tagline-size-desktop: 1.5rem;
-$h1-desktop: 2.25rem;
-$h2-desktop: 2rem;
+$h1-desktop: 1.9rem;
+$h2-desktop: 1.8rem;
 $h3-desktop: 1.75rem;
 $h4-desktop: 1.5rem;
 $h5-desktop: 1.25rem;
@@ -110,7 +111,7 @@ $h6-desktop: 1.1rem;
 /* Padding */
 
 $padding: 1rem;
-$margins: 1.5rem;
+$margins: 0.5rem;
 $content-padding: 60px 0;
 $content-padding-mobile: 30px 0;
 
@@ -132,20 +133,20 @@ $navigation-font-size-desktop: 1rem;
 $navigation-item-padding: 0.2rem 1rem;
 $navigation-item-padding-tablet: 0.2rem 0.8rem;
 $navigation-item-padding-desktop: 0.2rem 1rem;
-$navigation-item-colour: $sg-white;
+$navigation-item-color: $sg-white;
 
 /* Buttons */
 
-$button-background: rgba($sg-yellow, 1);
-$button-background-hover: $sg-yellow-lighter;
+$button-background: $sg-grey;
+$button-background-hover: $sg-grey-lighter;
 $button-color: $sg-white;
 $button-font-weight: 400;
 $button-font-family: 'Roboto Condensed', -apple-system, BlinkMacSystemFont, Helvetica Neue, Helvetica, Arial, sans-serif;
-$button-font-size: 1.2rem;
+$button-font-size: 1rem;
 $button-border-width: 1px;
 $button-border-style: solid;
-$button-border-color: $sg-yellow-darker;
-$button-border-radius: 20px;
+$button-border-color: transparent;
+$button-border-radius: 4px;
 $button-text-transform: none;
 
 // Accent buttons
@@ -162,7 +163,16 @@ $round-buttons: 40px;
 
 /* Forms */
 
+$forms: ('[type=color], [type=date], [type=datetime], [type=datetime-local], [type=email], [type=month], [type=number], [type=password], [type=search], [type=tel], [type=text], [type=url], [type=week], [type=time], select, textarea');
+$buttons: ('.button, a.button, button, [type=submit], [type=reset], [type=button]');
+$input-background: transparent;
+$placeholder: darken($accent-color, 20%);
+$form-border: 1px solid #cdcdcd;
+$form-border-hover: 1px solid darken(#cdcdcd, 10%);
+$form-border-focus: 1px solid $link-color;
 
+$error: red;
+$placeholder: $sg-grey-lighter;
 
 /* Tables */
 
