--- a/themes/storygen/sass/components/_views.scss
+++ b/themes/storygen/sass/components/_views.scss
@@ -26,6 +26,7 @@
     margin-bottom: 20px;
     box-shadow: 1px 1px 2px $sg-grey-lighter;
     border:1px solid $sg-grey-lighter;
+    padding: 2px;
   }
 
   @include small-breakpoint {
@@ -33,7 +34,7 @@
       flex: 1 0 calc(50% - 10px);
       box-sizing: border-box;
       //background: #e0ddd5;
-      //padding: 10px;
+      margin: 5px;
       //max-width: 250px;
     }
   }
@@ -174,6 +175,7 @@
     flex-direction: column;
     margin-bottom: 10px;
     box-shadow: 1px 1px 2px $sg-grey-lighter;
+    padding: 2px;
   }
 
   .sg-teaser-image{
